# fastgripper-openarm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: QUICKSTART.md  RELEASING.md
fastgripper/: __init__.py  _cli.py  autocal.py  calibrate.py  canbus.py  dm4310.py  doctor.py  drive.py  gui.py  pad.py
src/fastgripper/: __init__.py  autocal.py  calstore.py  canbus.py  doctor.py  drive.py
src/ourgripper/: __init__.py  autocal.py  calibrate.py  calstore.py  doctor.py  drive.py  gui.py  pad.py
