[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgripper-openarm"
version = "0.1.0"
description = "Standalone control toolkit for the DM-J4310 worm-gear gripper (SocketCAN / gs_usb / slcan)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }   # decide before making the repo public
dependencies = [
    "python-can>=4.0",
]

[project.optional-dependencies]
pad = ["pygame>=2.0"]          # gamepad mode of fastgripper-pad (keyboard mode needs nothing)
usb = ["pyusb>=1.2"]           # only for gs_usb/candlelight USB adapters (macOS bench use)

[project.scripts]
fastgripper-autocal = "fastgripper.autocal:main"
fastgripper-drive = "fastgripper.drive:main"
fastgripper-pad = "fastgripper.pad:main"
fastgripper-gui = "fastgripper.gui:main"
fastgripper-doctor = "fastgripper.doctor:main"
fastgripper-calibrate = "fastgripper.calibrate:main"

[tool.setuptools.packages.find]
where = ["src"]
