[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgripper-openarm"
version = "0.1.2"
description = "Standalone control toolkit for the DM-J4310 worm-gear FastGripper (SocketCAN / gs_usb / slcan)"
readme = "README.md"
authors = [{ name = "Transcend Mechanics" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }   # Apache-2.0, matching fastgripper-lerobot
dependencies = [
    "python-can>=4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Framework :: Robot Framework :: Library",
]

[project.urls]
Repository = "https://github.com/Transcend-Mechanics/fastgripper-openarm"

[project.optional-dependencies]
pad = ["pygame>=2.0"]          # gamepad mode of fastgripper-pad (keyboard mode needs nothing)
usb = ["pyusb>=1.2"]           # only for gs_usb/candlelight USB adapters (macOS bench use)

[project.scripts]
fastgripper-autocal = "fastgripper.autocal:cli"
fastgripper-drive = "fastgripper.drive:cli"
fastgripper-pad = "fastgripper.pad:cli"
fastgripper-gui = "fastgripper.gui:cli"
fastgripper-doctor = "fastgripper.doctor:cli"
fastgripper-calibrate = "fastgripper.calibrate:cli"

[tool.setuptools.packages.find]
include = ["fastgripper*"]
